# rust_ipc

./: Cargo.toml  LICENSE  README.md
examples/: benchmark.rs  connect.rs  stress.rs  tables.rs
src/: convert.rs  error.rs  ipc.rs  k.rs  lib.rs  serialize.rs  types.rs
src/io/: csv.rs  json.rs  mod.rs
tests/: ipc_test.rs  wire_hostile.rs
